<resources>
    <string-array name="sehir_array">

        <item>Adana</item>
        <item>Adıyaman</item>
        <item>Afyonkarahisar</item>
        <item>Ağrı</item>
        <item>Amasya</item>
        <item>Ankara</item>
        <item>Antalya</item>
        <item>Artvin</item>
        <item>Aydın</item>
        <item>Balıkesir</item>
        <item>Bilecik</item>
        <item>Bingöl</item>
        <item>Bitlis</item>
        <item>Bolu</item>
        <item>Burdur</item>
        <item>Bursa</item>
        <item>Çanakkale</item>
        <item>Çankırı</item>
        <item>Çorum</item>
        <item>Denizli</item>
        <item>Diyarbakır</item>
        <item>Edirne</item>
        <item>Elazığ</item>
        <item>Erzincan</item>
        <item>Erzurum</item>
        <item>Eskişehir</item>
        <item>Gaziantep</item>
        <item>Giresun</item>
        <item>Gümüşhane</item>
        <item>Hakkâri</item>
        <item>Hatay</item>
        <item>Isparta</item>
        <item>Mersin</item>
        <item>İstanbul</item>
        <item>İzmir</item>
        <item>Kars</item>
        <item>Kastamonu</item>
        <item>Kayseri</item>
        <item>Kırklareli</item>
        <item>Kırşehir</item>
        <item>Kocaeli</item>
        <item>Konya</item>
        <item>Kütahya</item>
        <item>Malatya</item>
        <item>Manisa</item>
        <item>Kahramanmaraş</item>
        <item>Mardin</item>
        <item>Muğla</item>
        <item>Muş</item>
        <item>Nevşehir</item>
        <item>Niğde</item>
        <item>Ordu</item>
        <item>Rize</item>
        <item>Sakarya</item>
        <item>Samsun</item>
        <item>Siirt</item>
        <item>Sinop</item>
        <item>Sivas</item>
        <item>Tekirdağ</item>
        <item>Tokat</item>
        <item>Trabzon</item>
        <item>Tunceli</item>
        <item>Şanlıurfa</item>
        <item>Uşak</item>
        <item>Van</item>
        <item>Yozgat</item>
        <item>Zonguldak</item>
        <item>Aksaray</item>
        <item>Bayburt</item>
        <item>Karaman</item>
        <item>Kırıkkale</item>
        <item>Batman</item>
        <item>Şırnak</item>
        <item>Bartın</item>
        <item>Ardahan</item>
        <item>Iğdır</item>
        <item>Yalova</item>
        <item>Karabük</item>
        <item>Kilis</item>
        <item>Osmaniye</item>
        <item>Düzce</item>
    </string-array>
    <string-array name="icon_array">

        <item>@drawable/adana</item>
        <item>@drawable/adiyaman</item>
        <item>@drawable/afyon</item>
        <item>@drawable/agri</item>
        <item>@drawable/amasya</item>
        <item>@drawable/ankara</item>
        <item>@drawable/antalya</item>
        <item>@drawable/artvin</item>
        <item>@drawable/aydin</item>
        <item>@drawable/balikesir</item>
        <item>@drawable/bilecik</item>
        <item>@drawable/bingol</item>
        <item>@drawable/bitlis</item>
        <item>@drawable/bolu</item>
        <item>@drawable/burdur</item>
        <item>@drawable/bursa</item>
        <item>@drawable/canakkale</item>
        <item>@drawable/cankiri</item>
        <item>@drawable/corum</item>
        <item>@drawable/denizli</item>
        <item>@drawable/diyarbakir</item>
        <item>@drawable/edirne</item>
        <item>@drawable/elazig</item>
        <item>@drawable/erzincan</item>
        <item>@drawable/erzurum</item>
        <item>@drawable/eskisehir</item>
        <item>@drawable/gaziantep</item>
        <item>@drawable/giresun</item>
        <item>@drawable/gumushane</item>
        <item>@drawable/hakkari</item>
        <item>@drawable/hatay</item>
        <item>@drawable/isparta</item>
        <item>@drawable/mersin</item>
        <item>@drawable/istanbul</item>
        <item>@drawable/izmir</item>
        <item>@drawable/kars</item>
        <item>@drawable/kastamonu</item>
        <item>@drawable/kayseri</item>
        <item>@drawable/kirklareli</item>
        <item>@drawable/kirsehir</item>
        <item>@drawable/kocaeli</item>
        <item>@drawable/konya</item>
        <item>@drawable/kutahya</item>
        <item>@drawable/malatya</item>
        <item>@drawable/manisa</item>
        <item>@drawable/kahramanmaras</item>
        <item>@drawable/mardin</item>
        <item>@drawable/mugla</item>
        <item>@drawable/mus</item>v
        <item>@drawable/nevsehir</item>
        <item>@drawable/nigde</item>
        <item>@drawable/ordu</item>
        <item>@drawable/rize</item>
        <item>@drawable/sakarya</item>
        <item>@drawable/samsun</item>
        <item>@drawable/siirt</item>
        <item>@drawable/sinop</item>
        <item>@drawable/sivas</item>
        <item>@drawable/tekirdag</item>
        <item>@drawable/tokat</item>
        <item>@drawable/trabzon</item>
        <item>@drawable/tunceli</item>
        <item>@drawable/sanliurfa</item>
        <item>@drawable/usak</item>
        <item>@drawable/van</item>
        <item>@drawable/yozgat</item>
        <item>@drawable/zonguldak</item>
        <item>@drawable/aksaray</item>
        <item>@drawable/bayburt</item>
        <item>@drawable/karaman</item>
        <item>@drawable/kirikkale</item>
        <item>@drawable/batman</item>
        <item>@drawable/sirnak</item>
        <item>@drawable/bartin</item>
        <item>@drawable/ardahan</item>
        <item>@drawable/igdir</item>
        <item>@drawable/yalova</item>
        <item>@drawable/karabuk</item>
        <item>@drawable/kilis</item>
        <item>@drawable/osmaniye</item>
        <item>@drawable/duzce</item>
    </string-array>
    <string name="app_name">Gezi Rehberi</string>
    <string name="ı_have_account">Hesabım var</string>
    <string name="create_new_account">Yeni Hesap Oluştur</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="email">Email</string>
    <string name="password">Parola</string>
    <string name="create_account">HESAP OLUŞTUR</string>
    <string name="login_with_your_account">Hesabınızla Giriş Yapınız</string>
    <string name="login">Giriş Yap</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Çıkış Yap</string>
    <string name="country_change">Şehir Değiştir</string>
    <string name="country_select">Şehir Seçiniz :</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detay">DetayActivity</string>
</resources>