<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="@drawable/gradient"
tools:context="com.tugbaozaydin.myapplication.Activity.LoginActivity">

    <include layout="@layout/actionbar_app"
        android:id="@+id/actionbarLogin" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/actionbarLogin"
        android:padding="10dp">
    <TextView
        android:id="@+id/txtInfo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_with_your_account"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:textSize="20dp"/>
    <EditText
        android:id="@+id/txtEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="20dp"
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/txtPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="20dp"
        android:inputType="textPassword"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/login"
        android:textSize="20dp"
        android:background="@color/colorAccent"
        android:textColor="@android:color/background_dark"
        android:layout_marginTop="30dp"/>
    </LinearLayout>
</RelativeLayout>
